--- a/templates.html
+++ b/templates.html
@@ -5,8 +5,14 @@
 
 <script type="text/template" id="uberbox-template-lightbox">
 </script>
+<script type="text/template" id="uberbox-template-carousel">
+</script>
+
 
 <script type="text/template" id="uberbox-template-lightbox-item">
+	<img src="<%= thumbnail %>">
+</script>
+<script type="text/template" id="uberbox-template-carousel-item">
 	<img src="<%= thumbnail %>">
 </script>
 
